# edge-lm

./: .gitignore  LICENSE  README.md  blog.md  pyproject.toml  requirements.txt
benchmarks/: evaluate.py  performance.py
benchmarks/quality/: README.md  lm_eval_vllm.py  mmlu_pro_vllm.py  release_models.json  verify_release.py
benchmarks/quality/protocols/: gemma4_ifeval_vllm.json  gemma4_mmlu_pro_vllm.json  gemma4_tau2_vllm_qwen_user.json
benchmarks/quality/results/: gemma4_release_quality.csv
edge_lm/: __init__.py
edge_lm/models/: __init__.py  load.py
edge_lm/models/gemma/: __init__.py  embeddings.py
examples/: chat.py  generation_test.py  test_audio.py  test_vision.py
model_cards/: gemma-4-E2B-it.md  gemma-4-E4B-it.md
